src/test/ui/partialeq_help.stderr
error[E0369]: can't compare `&T` with `T`
  --> $DIR/partialeq_help.rs:3:15
   |
LL |     let _ = a == b;
   |             - ^^ - T
   |             |
   |             &T
   |
help: `==` can be applied on `&T`
   |
LL |     let _ = a == &b;
   |                  +
help: consider changing this type parameter bound to `std::cmp::PartialEq`
   |
LL | fn foo<T: std::cmp::PartialEq>(a: &T, b: T) {
   |           ~~~~~~~~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
